# tarantool-c

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: tp.h  tp15.h  tp_io.c
src/: file.h  tarantool.h  tp.h  tp15.h  tp_io.c  tp_io.h
test/: CMakeLists.txt  test.c
